Fixed #2756